@@ -45,7 +45,7 @@ Disassembly of section .text:
 .*:	eb 6f 50 00 80 80 [	 ]*icmh	%r6,15,-524288\(%r5\)
 .*:	eb 6f 50 00 80 81 [	 ]*icmy	%r6,15,-524288\(%r5\)
 .*:	e3 65 a0 00 80 73 [	 ]*icy	%r6,-524288\(%r5,%r10\)
-.*:	b9 8e 50 69 [	 ]*idte	%r6,%r9,%r5
+.*:	b9 8e 50 69 [	 ]*idte	%r6,%r5,%r9
 .*:	eb 69 50 00 80 9a [	 ]*lamy	%a6,%a9,-524288\(%r5\)
 .*:	e3 65 a0 00 80 71 [	 ]*lay	%r6,-524288\(%r5,%r10\)
 .*:	e3 65 a0 00 80 76 [	 ]*lb	%r6,-524288\(%r5,%r10\)
