@@ -39,7 +39,7 @@ foo:
 	icmh	%r6,15,-524288(%r5)
 	icmy	%r6,15,-524288(%r5)
 	icy	%r6,-524288(%r5,%r10)
-	idte	%r6,%r9,%r5
+	idte	%r6,%r5,%r9
 	lamy	%a6,%a9,-524288(%r5)
 	lay	%r6,-524288(%r5,%r10)
 	lb	%r6,-524288(%r5,%r10)
