@@ -1,3 +1,7 @@
+2008-05-27  Martin Schwidefsky  <schwidefsky@de.ibm.com>
+
+	* s390-opc.c (INSTR_RRF_R0RR): Fix RRF_R0RR operand format.
+
 2008-05-22  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386-opc.tbl: Add NoAVX to cvtpd2pi, cvtpi2pd and cvttpd2pi.
